# apps/api/src/domain/signature/application/use-cases/errors/signature-image-not-found-error.ts
@@ -1,0 +1,6 @@
+export class SignatureImageNotFoundError extends Error {
+	constructor(blobKey: string) {
+		super(`Signature image '${blobKey}' not found in storage.`)
+		this.name = 'SignatureImageNotFoundError'
+	}
+}
