# apps/api/src/domain/signature/application/use-cases/errors/signature-not-found-error.ts
@@ -1,0 +1,6 @@
+export class SignatureNotFoundError extends Error {
+	constructor(documentId: string) {
+		super(`Signature for document '${documentId}' not found.`)
+		this.name = 'SignatureNotFoundError'
+	}
+}
